; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/gma500/extr_mdfld_intel_display.c_mdfldWaitForPipeDisable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/gma500/extr_mdfld_intel_display.c_mdfldWaitForPipeDisable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { %struct.drm_psb_private* }
%struct.drm_psb_private = type { %struct.psb_offset* }
%struct.psb_offset = type { i32 }

@.str = private unnamed_addr constant [22 x i8] c"Illegal Pipe Number.\0A\00", align 1
@COUNT_MAX = common dso_local global i32 0, align 4
@PIPEACONF_PIPE_STATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mdfldWaitForPipeDisable(%struct.drm_device* %0, i32 %1) #0 {
  %3 = alloca %struct.drm_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.drm_psb_private*, align 8
  %6 = alloca %struct.psb_offset*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.drm_device* %0, %struct.drm_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load %struct.drm_device*, %struct.drm_device** %3, align 8
  %10 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %9, i32 0, i32 0
  %11 = load %struct.drm_psb_private*, %struct.drm_psb_private** %10, align 8
  store %struct.drm_psb_private* %11, %struct.drm_psb_private** %5, align 8
  %12 = load %struct.drm_psb_private*, %struct.drm_psb_private** %5, align 8
  %13 = getelementptr inbounds %struct.drm_psb_private, %struct.drm_psb_private* %12, i32 0, i32 0
  %14 = load %struct.psb_offset*, %struct.psb_offset** %13, align 8
  %15 = load i32, i32* %4, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.psb_offset, %struct.psb_offset* %14, i64 %16
  store %struct.psb_offset* %17, %struct.psb_offset** %6, align 8
  %18 = load i32, i32* %4, align 4
  switch i32 %18, label %20 [
    i32 0, label %19
    i32 1, label %19
    i32 2, label %19
  ]

19:                                               ; preds = %2, %2, %2
  br label %22

20:                                               ; preds = %2
  %21 = call i32 @DRM_ERROR(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  br label %25

22:                                               ; preds = %19
  %23 = load %struct.drm_device*, %struct.drm_device** %3, align 8
  %24 = call i32 @gma_wait_for_vblank(%struct.drm_device* %23)
  br label %25

25:                                               ; preds = %22, %20
  ret void
}

declare dso_local i32 @DRM_ERROR(i8*) #1

declare dso_local i32 @gma_wait_for_vblank(%struct.drm_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
